# Robotic-Project

projeto_final/pioneer_controller/: package.xml  setup.cfg  setup.py
projeto_final/pioneer_controller/launch/: robot_launch.py
projeto_final/pioneer_controller/pioneer_controller/: closed_loop_control.py  pioneer_driver.py
projeto_final/pioneer_controller/resource/: pioneer.urdf
projeto_final/pioneer_controller/worlds/: pioneer.wbt
projeto_final/pioneer_interfaces/: CMakeLists.txt  package.xml
projeto_final/pioneer_interfaces/srv/: SetTravel.srv
projeto_final/webots/: direcionar_coord_fechado.py  direcionar_coordenadas.py  my_controller1.py  my_controller2.py  odometria.py  planeamento_aberto.py  planeamento_trajetoria.py  sensor_feedback.py  seta_teclado.py  trajetoria_curva_aberto.py  trajetoria_curva_fechado.py
